# Rex

./: .gitignore  CMakeLists.txt  FullRexExtraction  FullRexSchema  MinimalRexSchema  README.md  REX_IGNORE.db  ROSScript  ROSWalker.cpp  ROSWalker.h  RexEdge.cpp  RexEdge.h  RexHandler.cpp  RexHandler.h  RexMaster.cpp  RexMetamodel.dia  RexNode.cpp  RexNode.h  RexSchema  RexSchema.dia  RexSchemaFlat  TAGraph.cpp  TAGraph.h  autonomoose_model.ta  conanfile.py  main.cpp  test.ta.old
Configuration/: ScenarioWalker.cpp  ScenarioWalker.h
Driver/: RexHandler.cpp  RexHandler.h  RexMaster.cpp
Graph/: LowMemoryTAGraph.cpp  LowMemoryTAGraph.h  RexEdge.cpp  RexEdge.h  RexNode.cpp  RexNode.h  TAGraph.cpp  TAGraph.h
Tools/AIDE/: .project
Tools/AIDE/scripts/: controlFlow.ql  doubleMessage.ql
Tools/AIDE/src/ca/uwaterloo/bmuscede/aide/: AIDE.java  AnalysisGenerator.java
Tools/AIDE/src/ca/uwaterloo/bmuscede/process/: ControlStructureProcess.java  InteractionCreator.java
Tools/JSONMerge/: CMakeLists.txt  main.cpp
Tools/RIDE/: .classpath
Tools/RIDE/scripts/: doubleMessage.ql  featureComm.ql
Tools/RIDE/src/ca/uwaterloo/bmuscede/aide/: RIDE.java
Tools/RIDE/src/ca/uwaterloo/bmuscede/process/: DoubleWriteProcess.java  FeatureCommProcess.java  InteractionCreator.java  MasterProcess.java
Tools/RexAnalyzer/: .classpath  .project
Tools/RexAnalyzer/src/ca/uwaterloo/bmuscede/graph/: Edge.java  Node.java
Tools/RexAnalyzer/src/ca/uwaterloo/bmuscede/rex/: Analyzer.java  InteractionCreator.java  PathData.java
Tools/RexAnalyzer/src/ca/uwaterloo/bmuscede/ta/: StringErrorListener.java  TupleAttributeBaseListener.java  TupleAttributeLexer.java  TupleAttributeListener.java  TupleAttributeParser.java
Tools/TriageCheck/: .Triage.sh.swp  ExcludeElements.txt  Triage.sh
Tools/TriageCheck/grok_scripts/: BehaviourAlterationOne.ql  BehaviourAlterationThree.ql  BehaviourAlterationTwo.ql  InteractionPathLength.ql  PublisherAlterationOne.ql  PublisherAlterationThree.ql  PublisherAlterationTwo.ql  TimerAlterationOne.ql  TimerAlterationThree.ql  TimerAlterationTwo.ql
Tools/TriageCheck/helper_scripts/: ColourFormat.sh  Outputter.sh  UsageDisplay.sh  format.py  interaction_format.py  interaction_rank.py  model_modifier.py
Walker/: MinimalROSWalker.cpp  MinimalROSWalker.h  ParentWalker.cpp  ParentWalker.h  ROSConsumer.cpp  ROSConsumer.h  ROSWalker.cpp  ROSWalker.h
XML/: rapidxml_utils.hpp
